# lfkit

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  chedk.ipynb  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/_templates/: pages_redirect.html
docs/_templates/sidebar/: brand.html
docs/about/: corr_overview.rst
docs/api/: lfkit.corrections.kcorrect_from_color.rst  lfkit.corrections.kcorrect_grids.rst  lfkit.corrections.responses.rst
docs/api/index/: lfkit.api.corrections.rst  lfkit.api.rst  lfkit.cosmo.cosmology.rst  lfkit.rst  lfkit.utils.interpolation.rst  lfkit.utils.io.rst  lfkit.utils.rst  lfkit.utils.units.rst
docs/examples/: index.rst  poggianti_examples.rst
logo/: make_gh_banner.py  make_logo.py
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/about/: corr_overview.doctree  index.doctree  lf_overview.doctree
main/.doctrees/api/: index.doctree  lfkit.api.corrections.doctree  lfkit.api.doctree  lfkit.api.lumfunc.doctree  lfkit.corrections.color_anchors.doctree  lfkit.corrections.doctree  lfkit.corrections.filters.doctree  lfkit.corrections.kcorrect_backend.doctree  lfkit.corrections.kcorrect_from_color.doctree  lfkit.corrections.kcorrect_grids.doctree  lfkit.corrections.poggianti1997.doctree  lfkit.corrections.responses.doctree  lfkit.cosmo.cosmology.doctree  lfkit.cosmo.doctree  lfkit.doctree  lfkit.lf.doctree  lfkit.utils.doctree  lfkit.utils.download_poggianti97_data.doctree  lfkit.utils.interpolation.doctree  lfkit.utils.io.doctree  lfkit.utils.units.doctree
main/.doctrees/examples/: index.doctree  kcorrect_examples.doctree  poggianti_examples.doctree
main/_modules/: index.html
main/_modules/lfkit/api/: corrections.html
main/_modules/lfkit/corrections/: color_anchors.html  filters.html  kcorrect_backend.html  kcorrect_from_color.html  kcorrect_grids.html  poggianti1997.html  responses.html
main/_modules/lfkit/cosmo/: cosmology.html
main/_modules/lfkit/utils/: download_poggianti97_data.html  interpolation.html  io.html  units.html
main/_sources/about/: index.rst.txt  lf_overview.rst.txt
main/_sources/api/: index.rst.txt  lfkit.api.lumfunc.rst.txt  lfkit.corrections.color_anchors.rst.txt  lfkit.corrections.filters.rst.txt  lfkit.corrections.kcorrect_backend.rst.txt  lfkit.corrections.poggianti1997.rst.txt  lfkit.corrections.rst.txt  lfkit.cosmo.rst.txt  lfkit.lf.rst.txt  lfkit.utils.download_poggianti97_data.rst.txt
main/_sources/examples/: kcorrect_examples.rst.txt
main/about/: corr_overview.html  index.html  lf_overview.html
main/api/: index.html  lfkit.api.corrections.html  lfkit.api.html  lfkit.api.lumfunc.html  lfkit.corrections.color_anchors.html  lfkit.corrections.filters.html  lfkit.corrections.html  lfkit.corrections.kcorrect_backend.html  lfkit.corrections.kcorrect_from_color.html  lfkit.corrections.kcorrect_grids.html  lfkit.corrections.poggianti1997.html  lfkit.corrections.responses.html  lfkit.cosmo.cosmology.html  lfkit.cosmo.html  lfkit.html  lfkit.lf.html  lfkit.utils.download_poggianti97_data.html  lfkit.utils.html  lfkit.utils.interpolation.html  lfkit.utils.io.html  lfkit.utils.units.html
main/examples/: index.html  kcorrect_examples.html  poggianti_examples.html
scripts/: compare_kcorr_pogg_vs_kcorrect.py  compare_kcorr_surveys.py  compare_poggianti_to_kcorrect.py  plot_kcorrect_corrections.py  plot_poggianti1997_corrections.py
src/lfkit/: __init__.py
src/lfkit/api/: corrections.py
src/lfkit/corrections/: color_anchors.py  color_split.py  filters.py  kcorrect.py  kcorrect_backend.py  kcorrect_from_color.py  kcorrect_grids.py  poggianti1997.py  responses.py
src/lfkit/cosmo/: cosmology.py
src/lfkit/data/kcorrect/grids/: kcorrect__bessell__z0.0000_4.0__Nz801__bsnone.npz  kcorrect__decam__z0.0000_4.0__Nz801__bsnone.npz  kcorrect__sdss__z0.0000_4.0__Nz801__bsnone.npz  kcorrect__subaru_suprimecam__z0.0000_4.0__Nz801__bsnone.npz
src/lfkit/data/poggianti1997/: ecorr.csv  filters.csv  kcorr.csv  kcorrv.csv  sed.csv
src/lfkit/utils/: build_kcorrect_grids.py  download_poggianti97_data.py  interpolation.py  io.py  units.py
tests/: test_api_corrections.py  test_corrections_color_anchors.py  test_corrections_color_split.py  test_corrections_filters.py  test_corrections_kcorrect.py  test_corrections_kcorrect_backend.py  test_corrections_kcorrect_from_color.py  test_corrections_kcorrrect_grids.py  test_corrections_poggianti1997.py  test_corrections_responses.py  test_cosmo_cosmology.py  test_utils_build_kcorrect_grids.py  test_utils_download_pogg97_data.py  test_utils_interpolation.py  test_utils_io.py  test_utils_units.py
