[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lfkit"
version = "0.1.0"
description = "Luminosity functions and photometric corrections toolkit."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
corrections = [
  "scipy>=1.9",
  "pyccl>=3.0",
]

viz = [
  "matplotlib>=3.7",
  "cmasher>=1.8",
]

dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"lfkit.data.poggianti1997" = ["*.csv"]
"lfkit.data.kcorrect.grids" = ["*.npz"]

[tool.ruff]
line-length = 88
target-version = "py310"

# Only lint files under src/
src = ["src"]
# Exclude tests and other non-source files
include = ["src/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]